updated project file to include overtone and jvm params